hphp/hack/test/typecheck/reactive/mayberx10.php.like_types.exp
File "mayberx10.php", line 5, characters 10-17:
Invalid return type (Typing[4110])
File "mayberx10.php", line 4, characters 62-64:
Expected int
File "mayberx10.php", line 5, characters 10-17:
But got num because this is the result of an arithmetic operation
